--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_ijkplayer: 0.3.5+1
   dio: 3.0.9
+  html: 0.14.0+3
 
 dev_dependencies:
   flutter_test:
