--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@vue/cli-service": "~4.4.0",
     "babel-plugin-import": "^1.11.0",
     "cross-env": "^7.0.2",
+    "csstype": "^3.0.2",
     "jest": "^25.4.0",
     "mini-types": "*",
     "miniprogram-api-typings": "*",
