视频接口相关

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "flyio": "^0.6.2",
     "luch-request": "^3.0.4",
     "regenerator-runtime": "^0.12.1",
+    "url-parse": "^1.4.7",
     "vue": "^2.6.11",
     "vue-class-component": "^6.3.2",
     "vue-property-decorator": "^8.0.0",
@@ -78,6 +79,7 @@
     "@dcloudio/webpack-uni-mp-loader": "^2.0.0-28320200727001",
     "@dcloudio/webpack-uni-pages-loader": "^2.0.0-28320200727001",
     "@types/cheerio": "^0.22.21",
+    "@types/url-parse": "^1.4.3",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-typescript": "*",
     "@vue/cli-service": "~4.4.0",
